# netscript

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt  dot_net_runtime.cpp  dot_net_runtime.h  host_utils.cpp  host_utils.h  import_export.h
Engine/: CMakeLists.txt  main.cpp
ManagedScripts/: ManagedScripts.csproj  MyFirstScript.cs
ScriptAPI/: AssemblyInfo.cpp  CMakeLists.txt  ScriptAPI.cpp  ScriptAPI.h  ScriptAPI.sln  ScriptAPI.vcxproj  ScriptAPI.vcxproj.filters  engine_interface.cxx  engine_interface.hxx  script.cxx  script.hxx
